[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/character/dark-wizard.png" type="Texture" id=1]
[ext_resource path="res://character/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/character/dark-wizard-shield.png" type="Texture" id=3]
[ext_resource path="res://character/enemies/DarkWizardFSM.gd" type="Script" id=4]
[ext_resource path="res://character/enemies/DarkWizard.gd" type="Script" id=5]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float flash_modifier = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 18 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 3 )

[sub_resource type="Animation" id=6]
resource_name = "shield"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Shield:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="DarkWizard" instance=ExtResource( 2 )]
collision_layer = 32
script = ExtResource( 5 )
max_health = 16

[node name="StateMachine" parent="." index="0"]
script = ExtResource( 4 )
can_be_stunned = false

[node name="Body" parent="." index="1"]
material = SubResource( 5 )

[node name="Character" type="Sprite" parent="Body" index="0"]
use_parent_material = true
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )

[node name="Shield" type="Sprite" parent="Body" index="1"]
position = Vector2( 1, -15 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="1"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="TransitionTimer" type="Timer" parent="Timers" index="1"]
one_shot = true

[node name="MagicTween" type="Tween" parent="Tweens" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactDamage" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="AnimationPlayer" parent="." index="8"]
autoplay = "shield"
anims/shield = SubResource( 6 )

[node name="MagicContainer" type="Node2D" parent="." index="9"]
position = Vector2( 0, -12 )
[connection signal="stunned" from="." to="StateMachine" method="_on_stun"]
[connection signal="uncle" from="." to="StateMachine" method="_on_DarkWizard_uncle"]
[connection signal="damaged" from="Hitbox" to="." method="_on_Hitbox_damaged"]
[connection signal="timeout" from="Timers/StunTimer" to="StateMachine" method="_on_stun_timeout"]
[connection signal="timeout" from="Timers/BubbleTimer" to="." method="_on_BubbleTimer_timeout"]
